# ccwc

./: .gitignore  README.md  pyproject.toml
ccwc/: wc.py
